fix(frontend): search filter by astring
